# manta-signer

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  FILE_TEMPLATE  Makefile  Manta-Native-Daemon.md  README.md  app.go  check_ref.sh  command_service.go  create_app.sh  e2e.yml  gen_filepath.sh  get_release.sh  go.mod  go.sum  incoming_urls.go  index.html  lstaticdarwin.go  lstaticwindows.go  main.go  package.json  package.sh  project.json  release.sh  run.sh  server.go  service.go  startit.sh  txAuthDisplay.go
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml  release.yaml
.github/workflows/: ci.yml  create_release.yml  e2e.yml  manual.yml  release.yml  tag.yaml  trigger.yml
.github/workflows/e2e/: build_node.sh  clone_signer.sh  get_latest_node_version.sh  get_latest_sdk_version.sh  get_latest_signer_version.sh  get_node.sh  move_proving_keys.sh  run_test.sh
_src/: lib.rs  secret.rs  service.rs
deprecated/: app.go  go.sum  lstaticwindows.go  server.go  wails.json
deprecated/frontend/: .gitignore  package.json
deprecated/frontend/src/: main.js
deprecated/frontend/src/assets/: main.css
deprecated/frontend/src/views/: CreateAccount.vue  Home.vue
deprecated/lib/: zkp.h
deprecated/lib/zkp/: Cargo.toml
deprecated/lib/zkp/src/: lib.rs
deprecated/utils/: utils.go
docs/: manta-signer-state-machine.tex  testing-workflow.md
e2e/: README.md  default-config.json
e2e/src/: main.rs
examples/: README.md  test_server.rs
frontend/: package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/backend/: index.js
frontend/src/plugins/: element.js
frontend/src/router/: index.js
frontend/src/views/: AuthorizeTransaction.vue  CreateAccount.vue  CreateNewAccount.vue  HomePage.vue  RecoverAccount.vue  RestoreVault.vue  SignIn.vue  SignInPage.vue  UnlockPage.vue
js/: .eslintrc.yml  .gitignore  .prettierrc  README.md  package.json  tsconfig.json
js/coin-selection/: README.md  package.json  tsconfig.tsbuildinfo
js/coin-selection/src/: coinSelection.ts  index.ts  selectCoins.ts
js/dolphin-api/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
js/dolphin-api/src/: index.ts  output.ts  types.ts
js/e2e/: AliceAddressStore.json  README.md  package.json  tsconfig.json
js/e2e/simulation/: Cargo.toml  dol-only.json  out.json
js/e2e/test/: constants.ts  simlatedUser.ts  test.ts  utils.ts
js/signer-interface/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
js/signer-interface/src/: index.ts
js/signer-interface/src/classes/: clientAsset.ts  simulatedLedgerState.ts
js/signer-interface/src/config/: browserSignerInterfaceConfig.ts  nodeJsSignerInterfaceConfig.ts  signerInterfaceConfig.ts
js/signer-interface/src/constants/: bip44Constants.ts
js/signer-interface/src/interface/: blockchainNodeClient.ts  signerClient.ts  signerInterface.ts  signerParamGen.ts
js/signer-interface/src/store/addressStore/: addressStore.ts  browserAddressStore.ts  jsonAddressStore.ts
js/simulation/src/: main.rs
js/workflows/: package.json  tsconfig.json  tsconfig.tsbuildinfo
js/workflows/src/: index.ts
js/workflows/src/utils/: GetFailedExtrinsicError.ts  MakeTxResHandler.ts  TxStatus.ts
js/workflows/src/workflows/: derive_address_workflow.ts  mint_asset_workflow.ts  private_transfer_asset_workflow.ts  reclaim_asset_workflow.ts  recover_account_workflow.ts  reset_storage_workflow.ts  transfer_asset_workflow.ts
lib/: hello.h  zkp.h
lib/hello/: Cargo.toml
lib/hello/src/: lib.rs
lib/zkp/: Cargo.toml
lib/zkp/src/: lib.rs
mac/: bundler.go
prover_key_gen/: Cargo.toml
prover_key_gen/src/: main.rs
scripts/: check_ref.sh  gen_filepath.sh  suffix.js
src/: batching.rs  config.rs  http.rs  lib.rs  log.rs  network.rs  parameters.rs  query.rs  secret.rs  service.rs  signer.rs  storage.rs
src-tauri/: .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  secret.rs  service.rs  test.rs  ui.rs
test-headless/: .package.json.swp  karma.conf.js  package.json  tsconfig.json
test-headless/test/: test.js  test.js.map  test.ts
test-selenium/: 0.42.2_0.crx  0.42.2_0.pem  bringup.sh  e2e-local.json  e2e.json  fetch_driver.sh  index.js  out.json  package.json  pc_launch_output  run_test.sh  user.js  util.js
test-selenium/0.42.2_0/: background.js  background.js.LICENSE.txt  content.js  extension.js  extension.js.LICENSE.txt  manifest.json  page.js
test-socket/: derive-shielded-address.json  generate-mint-data.json  generate-private-transfer-data.json  generate-reclaim-data.json  index.js  package.json
ui/: .gitignore  README.md  index.html  package-lock.json  package.json
ui/public/: about.html  index.html  manifest.json
ui/src/: App.css  App.js  TitleBar.js  index.css  index.js
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/proving/: to-private.lfs
ui/src-tauri/src/: main.rs
ui/src/components/: ErrorLabel.js  HyperLinkButton.js  copyButton.js
ui/src/pages/: Account.js  Authorize.js  AuthorizeTx.js  CreacteAccount.js  CreateAccount.js  CreateOrRecover.js  Loading.js  Login.js  NewPassword.js  Recover.js  Reset.js  ResetAccount.js  SignIn.js  SignInOrReset.js  ViewSecretPhrase.js
ui/src/pages/AccountCreation/: ConfirmPhrase.js  CreateAccount.js  ShowPhrase.js
ui/src/pages/Recovery/: Finish.js  NewPassword.js  Recover.js  SeedPhrase.js
ui/src/pages/SignIn/: SignIn.js  SignInPage.js  SignInSuccess.js
ui/src/pages/ViewPhrase/: ViewPhrasePage.js  ViewPhraseSuccess.js  ViewSecretPhrase.js
update-server/: .env  Cargo.toml  Dockerfile  build_and_push.sh
update-server/src/: auth.rs  endpoints.rs  main.rs  types.rs
updater-server/: Cargo.toml
updater-server/src/: auth.rs  endpoints.rs  main.rs  types.rs
utils/: utils.go
ws-tester/: package-lock.json  package.json
ws-tester/src/: App.js
www/: .gitignore  README.md  package.json  tailwind.config.js  tsconfig.json
www/public/: index.html  manifest.json
www/src/: App.css  App.tsx  index.css  index.tsx
(+8 files in other folders)
