[package]
name = "manta-signer"
edition = "2021"
version = "0.8.0"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-signer"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-signer"
categories = [""]
keywords = [""]
description = "Manta Signer"
publish = false

[workspace]
resolver = "2"
members = ["ui/src-tauri"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-signer" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-signer" }
maintenance = { status = "actively-developed" }

[features]
# Disable CORS Check: This is UNSAFE in general and should only be used in debug builds.
unsafe-disable-cors = []

# config
config = []

# http
http = []

# log
log = []

# network
network = []

# parameters
parameters = []

# secret
secret = []

# service
service = []

# storage
storage = []

# default
default = ["argon2", "async-std", "chrono", "derivative", "dirs-next", "futures", "http-types", "manta-accounting", "manta-crypto", "manta-parameters", "manta-pay", "manta-util", "parking_lot", "password-hash", "reqwest", "secrecy", "serde_json", "subtle", "tide", "tokio"]

# onlynetwork
onlynetwork = ["manta-util"]

[dependencies]
argon2 = { version = "0.4.1", default-features = false, features = ["alloc", "password-hash"], optional = true }
async-std = { version = "1.11.0", default-features = false, features = ["attributes", "tokio1"], optional = true }
chrono = { version = "0.4.19", default-features = false, features = ["clock"], optional = true }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"], optional = true }
dirs-next = { version = "2.0.0", default-features = false, optional = true }
futures = { version = "0.3.17", default-features = false, features = ["alloc"], optional = true }
http-types = { version = "2.12.0", default-features = false, optional = true }
manta-accounting = { git = "https://github.com/manta-network/manta-rs", branch = "signer_redesign", default-features = false, features = ["cocoon-fs"], optional = true }
manta-crypto = { git = "https://github.com/manta-network/manta-rs", branch = "signer_redesign", default-features = false, features = ["getrandom"], optional = true }
manta-parameters = { git = "https://github.com/manta-network/manta-rs", branch = "signer_redesign", default-features = false, features = ["download"], optional = true }
manta-pay = { git = "https://github.com/manta-network/manta-rs", branch = "signer_redesign", default-features = false, features = ["bs58", "groth16", "serde", "wallet"], optional = true }
manta-util = { git = "https://github.com/manta-network/manta-rs", branch = "signer_redesign", default-features = false, optional = true }
parking_lot = { version = "0.12.1", default-features = false, optional = true }
password-hash = { version = "0.4.2", default-features = false, features = ["alloc"], optional = true }
reqwest = { version = "0.11.11", default-features = false, features = ["json"], optional = true }
secrecy = { version = "0.8.0", default-features = false, features = ["alloc"], optional = true }
serde_json = { version = "1.0.68", default-features = false, optional = true }
subtle = { version = "2.4.1", default-features = false, optional = true }
tide = { version = "0.16.0", default-features = false, features = ["h1-server"], optional = true }
tokio = { version = "1.20.1", default-features = false, features = ["fs", "io-std", "io-util", "rt", "sync", "time"], optional = true }

[dev-dependencies]
tempfile = { version = "3.3.0", default-features = false }
