[package]
name = "manta-signer"
edition = "2021"
version = "1.2.1"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-signer"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-signer"
categories = [""]
keywords = [""]
description = "Manta Signer"
publish = false

[workspace]
resolver = "2"
members = ["ui/src-tauri"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-signer" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-signer" }
maintenance = { status = "actively-developed" }

[features]
# Disable CORS Check: This is UNSAFE in general and should only be used in debug builds.
unsafe-disable-cors = []

# Disable app restart functionality which does not work in dev mode, only in actual builds.
disable-restart = []

[dependencies]
argon2 = { version = "0.4.1", default-features = false, features = ["alloc", "password-hash"] }
async-std = { version = "1.11.0", default-features = false, features = ["attributes", "tokio1"] }
bincode = "1.3.3"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
dirs-next = { version = "2.0.0", default-features = false }
futures = { version = "0.3.17", default-features = false, features = ["alloc"] }
http-types = { version = "2.12.0", default-features = false }
manta-accounting = { git = "https://github.com/manta-network/manta-rs", tag = "v0.5.12", default-features = false, features = ["cocoon-fs"] }
manta-crypto = { git = "https://github.com/manta-network/manta-rs", tag = "v0.5.12", default-features = false, features = ["getrandom"] }
manta-parameters = { git = "https://github.com/manta-network/manta-rs", tag = "v0.5.12", default-features = false, features = ["download"] }
manta-pay = { git = "https://github.com/manta-network/manta-rs", tag = "v0.5.12", default-features = false, features = ["bs58", "groth16", "serde", "wallet", "std", "parameters"] }
manta-util = { git = "https://github.com/manta-network/manta-rs", tag = "v0.5.12", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
password-hash = { version = "0.5.0", default-features = false, features = ["alloc"] }
previous-state-manta-pay = { package = "manta-pay", git = "https://github.com/manta-network/manta-rs", tag = "v0.5.10", default-features = false, features = ["bs58", "groth16", "serde", "wallet", "std", "parameters"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json"] }
secrecy = { version = "0.8.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.91", default-features = false }
subtle = { version = "2.4.1", default-features = false }
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
tokio = { version = "1.20.1", default-features = false, features = ["fs", "io-std", "io-util", "rt", "sync", "time"] }

[dev-dependencies]
tempfile = { version = "3.3.0", default-features = false }
