[package]
name = "manta-signer"
version = "0.1.0"
edition = "2018"
description = "Manta Signer"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
async-fs = "1.5.0"
bip0039 = { version = "0.9.0" }
cocoon = { version = "0.3.0" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive", "full" ] }
hex = { version = "0.4.3" }
manta-api = { git = "https://github.com/Manta-Network/manta-api", branch = "avoid_address_reuse", default_features = false, features = ["signer", "testnet"] }
manta-asset = { git = "https://github.com/Manta-Network/manta-types", branch = "manta" }
manta-crypto = { git = "https://github.com/Manta-Network/manta-crypto", branch = "manta" }
rand = { version = "0.8.4" }
rand_chacha = { version = "0.3.1", default-features = false }
reqwest = { version = "0.11.6" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68" }
tauri = { version = "1.0.0-beta.8", features = ["reqwest-client", "system-tray"] }
tiny-hderive = { git = "https://github.com/Manta-Network/tiny-hderive" }
tokio = { version = "1.12.0", features = ["time"] }

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

