[package]
name = "update-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
hmac = "0.12.0"
jwt = "0.16.0"
log = "0.4.14"
rusoto_core = "0.47.0"
rusoto_dynamodb = "0.47.0"
rusoto_secretsmanager = "0.47.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sha2 = "0.10.1"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
