[package]
name = "manta-signer-ui"
edition = "2018"
version = "0.7.2"
authors = ["Manta Network <contact@manta.network>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Manta-Network/manta-signer"
homepage = "https://github.com/Manta-Network"
documentation = "https://github.com/Manta-Network/manta-signer"
categories = [""]
keywords = [""]
description = "Manta Signer UI"
publish = false

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[badges]
is-it-maintained-issue-resolution = { repository = "Manta-Network/manta-signer" }
is-it-maintained-open-issues = { repository = "Manta-Network/manta-signer" }
maintenance = { status = "actively-developed" }

[features]
# Default Features
default = ["custom-protocol"]

# Tauri Custom Protocol Building Feature
custom-protocol = ["tauri/custom-protocol"]

# Disable CORS Check
unsafe-disable-cors = ["manta-signer/unsafe-disable-cors"]

[dependencies]
manta-signer = { path = "../../", default-features = false }
manta-pay = { git = "https://github.com/manta-network/manta-rs", default-features = false, features = ["bs58", "groth16", "serde", "wallet"] }
tauri = { version = "1.0.0", default-features = false, features = ["reqwest-client", "system-tray", "updater", "window-hide", "window-show", "wry"] }
reqwest = { version = "0.11.11", default-features = false }

[build-dependencies]
tauri-build = { version = "1.0.0", default-features = false, features = [] }

